// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#gremlins/gremlins/password/field <Field /> With additional props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={true}
  id="MOCK ID"
  name="MOCK NAME"
  readOnly={true}
  required={true}
  type="password"
/>
`;

exports[`#gremlins/gremlins/password/field <Field /> With required props renders 1`] = `
<input
  className="MOCK CLASSNAME"
  disabled={false}
  name="MOCK NAME"
  readOnly={false}
  required={false}
  type="password"
/>
`;
